[package]
name = "emu_lib_ui"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true

[profile.release]
debug = true

[dependencies]
emu_lib = { path = "deps/rs_emu_lib" }
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.13", features = ["csr", "nightly"] }
leptos-use = {version= "0.13.4"}
stylance = { version="0.5.1", features = ["nightly"] }
log = "0.4.22"
tokio = { version = "1.40.0", features = ["time"] }

[dependencies.web-sys]
version = "0.3.70"
features = [
    "HtmlInputElement",
    "File",
    "FileList",
    "FileReader",
    "CanvasRenderingContext2d",
]
