[package]
name = "emu_lib_ui"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true

[profile.release]
debug = true

[dependencies]
emu_lib = { git = "https://github.com/mirage2032/rs_emu_lib.git" }
console_error_panic_hook = "0.1.7"
leptos = { git = "https://github.com/leptos-rs/leptos.git", features = ["nightly","experimental-islands"] }
leptos-use = {version= "0.14.0-beta4"}
leptos_meta = { git = "https://github.com/leptos-rs/leptos.git" }
stylance = { version="0.5.1", features = ["nightly"] }
log = "0.4.22"
tokio = { version = "1.40.0", features = ["time"] }
serde = { version = "1.0.210", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.70"
features = [
    "HtmlInputElement",
    "File",
    "FileList",
    "FileReader",
    "CanvasRenderingContext2d",
]

[features]
default = ["csr"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr","leptos-use/ssr"]
csr = ["leptos/csr"]


[package.metadata.stylance]
output_dir = "./static/css"
